fixup! Implement /api/transactions/sum